--- a/negocio/.classpath
+++ b/negocio/.classpath
@@ -7,8 +7,8 @@
 			<attribute name="owner.project.facets" value="jst.utility"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/javax.mail.jar"/>
-	<classpathentry kind="lib" path="lib/postgresql-9.3-1102.jdbc41.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/javax.mail.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/postgresql-9.3-1102.jdbc41.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre7">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
